analysisfiles/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-job1
spec:
  selector:
    app: rollout-job1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
